correct style and typos

--- a/index.html
+++ b/index.html
@@ -39,28 +39,35 @@
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
       }
+
+      .main-content {
+        padding: 2rem;
+      }
     </style>
   </head>
 
-  <!-- your content here... -->
-  <script src="js/scripts.js"></script>
+  <body>
+    <div class="main-content">
+      <script src="js/scripts.js"></script>
 
-  <h1>Robin website</h1>
+      <h1>Robin website</h1>
 
-  <p>Bonjour je m'appelle Robin</p>
+      <p>Bonjour je m'appelle Robin</p>
 
-  <img
-    src="https://i.dailymail.co.uk/1s/2020/05/17/05/28485286-8327447-image-a-108_1589689829526.jpg"
-    alt="Italian Trulli"
-    height="100"
-  />
+      <img
+        src="https://i.dailymail.co.uk/1s/2020/05/17/05/28485286-8327447-image-a-108_1589689829526.jpg"
+        height="200"
+      />
 
-  <img
-    src="https://image.scoopwhoop.com/w360/s3.scoopwhoop.com/anj/sw/e2ad2356-e6c8-4da2-b164-ec9828054af6.jpg.webp"
-  />
+      <img
+        src="https://image.scoopwhoop.com/w360/s3.scoopwhoop.com/anj/sw/e2ad2356-e6c8-4da2-b164-ec9828054af6.jpg.webp"
+        height="200"
+      />
 
-  <p>
-    if your on this we are going to look at some cute and small creaturs but
-    also poisenis
-  </p>
+      <p>
+        If your on this we are going to look at some cute and small creatures
+        but also poisenous.
+      </p>
+    </div>
+  </body>
 </html>
